--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -10,7 +10,8 @@ $color-bg: #0A0C1A;
 $color-white: #fff;
 $color-black: #070911;
 $color-black-bold: #06070D;
-$color-input-bg: #0A0D18;
+$color-input-bg: #131731;
+$color-black-box: rgba(6, 7, 13, 0.3);
 $color-blue-bold: #0D1124;
 $color-blue-bg: #080A16;
 $color-blue-active: #2F3C99;
@@ -24,5 +25,5 @@ $color-polo-blue: #8F9CCB;
 
 $container-padding: 16px;
 
-$font-fam-def: 'SuisseIntl', sans-serif;
+$font-fam-def: 'Jost', sans-serif;
 $transition: all .5s
