--- a/client/src/components/global/PaymentList/PaymentList.module.scss
+++ b/client/src/components/global/PaymentList/PaymentList.module.scss
@@ -13,7 +13,13 @@
   &__functions {
     @include flexCol(space-between);
     margin-bottom: 20px;
+    gap: 20px;
   }
+
+  &__deleteBtn {
+    background-color: $color-red;
+  }
+
 
   &__main {
     display: grid;
@@ -23,43 +29,5 @@
     @include smScreenMedia {
       grid-template-columns: 1fr;
     }
-  }
-
-  &__item {
-    background-color: $color-blue-bold;
-    border-radius: 10px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
-  }
-
-  &__mainText {
-    @include setFont(24px, 400);
-    margin-bottom: 8px;
-  }
-
-  &__secText {
-    @include setFont(16px, 400);
-    margin-bottom: 6px;
-  }
-
-  &__itemBottomBlock {
-    margin-top: auto;
-  }
-
-  &__filesBtn {
-    cursor: pointer;
-    background-color: $color-blue-active;
-    @include setFont(16px, 400);
-    border: none;
-    width: 100%;
-    padding: 20px 6px;
-    border-radius: 30px;
-    @include flexCol();
-    margin: 30px auto 40px;
-  }
-
-  &__itemStatusBtns {
-    @include flexCol(space-between)
   }
 }
