--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -1,19 +1,6 @@
 @import "vars";
 @import "mixins";
 
-@font-face {
-  font-family: 'SuisseIntl';
-  src: url('../assets/fonts/SuisseIntl-Regular.ttf') format('ttf');
-  font-weight: 400
-}
-
-@font-face {
-  font-family: 'SuisseIntl';
-  src: url('../assets/fonts/SuisseIntl-Medium.ttf') format('ttf');
-  font-weight: 500;
-}
-
-
 *, *:before, *:after {
   box-sizing: border-box;
   margin: 0;
@@ -106,7 +93,7 @@ body {
 }
 
 .blackBox {
-  background: rgba(6, 7, 13, 0.3);
+  background: $color-black-box;
   width: 100%;
   border-radius: 16px;
   padding: 40px;
@@ -169,18 +156,21 @@ body {
 
   &:hover, &:focus {
     box-shadow: 0px 0px 0px 1px $color-main;
-    background-color: #101320;
   }
 
   &::placeholder {
     color: #585859;
   }
 
-  &_withIcon {
-    background-repeat: no-repeat;
-    background-size: 16px;
-    background-position: 17px 50%;
-    padding-left: 50px;
+  &::-webkit-calendar-picker-indicator {
+    color: rgba(0, 0, 0, 0);
+    opacity: 1;
+    display: block;
+    background: url(../assets/images/MainInput/calendar.png) no-repeat;
+    width: 20px;
+    height: 20px;
+    border-width: thin;
+    cursor: pointer;
   }
 
   &:-webkit-autofill,
@@ -194,8 +184,19 @@ body {
     transition: $transition;
   }
 
+  &_withIcon {
+    background-repeat: no-repeat;
+    background-size: 16px;
+    background-position: 17px 50%;
+    padding-left: 50px;
+  }
+
   &_invalid {
     box-shadow: 0px 0px 0px 1px $color-red;
+
+    &:hover, &:focus {
+      box-shadow: 0px 0px 0px 1px $color-red;
+    }
   }
 }
 
