--- a/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
+++ b/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
@@ -3,7 +3,7 @@
 
 
 .paymentListItem {
-  background-color: $color-blue-bold;
+  background-color: $color-blue-rhino;
   border-radius: 10px;
   padding: 20px;
   display: flex;
