--- a/client/src/styles/_vars.scss
+++ b/client/src/styles/_vars.scss
@@ -11,6 +11,7 @@ $color-white: #fff;
 $color-black: #070911;
 $color-black-bold: #06070D;
 $color-input-bg: #131731;
+$color-blue-rhino: #2C3255;
 $color-black-box: rgba(6, 7, 13, 0.3);
 $color-blue-bold: #0D1124;
 $color-blue-bg: #080A16;
