--- a/client/src/components/AdminEmployeesPage/AdminEmployeesList/AdminEmployeesList.module.scss
+++ b/client/src/components/AdminEmployeesPage/AdminEmployeesList/AdminEmployeesList.module.scss
@@ -21,7 +21,7 @@
   }
 
   &__item {
-    background-color: $color-blue-bold;
+    background-color: $color-blue-rhino;
     border-radius: 10px;
     padding: 14px 30px;
     width: 100%;
@@ -62,7 +62,7 @@
     white-space: nowrap;
     cursor: pointer;
     border: none;
-    background-color: #FF0000;
+    background-color: #ff4040;
     border-radius: 6px;
     padding: 6px 8px;
     @include setFont(14px, 700)
@@ -107,7 +107,9 @@
     border-radius: 10px;
     border: 1px solid $color-white;
     padding: 12px 30px;
+    background-color: $color-blue-bold;
     @include flexCol(space-between);
+    gap: 10px;
 
     @include lgScreenMedia {
       padding-left: 20px;
