--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -166,9 +166,11 @@ body {
     color: rgba(0, 0, 0, 0);
     opacity: 1;
     display: block;
-    background: url(../assets/images/MainInput/calendar.png) no-repeat;
-    width: 20px;
-    height: 20px;
+    background-image: url(../assets/images/MainInput/calendar.png);
+    background-repeat: no-repeat;
+    background-size: 14px;
+    width: 12px;
+    height: 12px;
     border-width: thin;
     cursor: pointer;
   }
@@ -226,4 +228,8 @@ body {
   &_passive {
     background-color: $color-blue-passive;
   }
+}
+
+.noWrap {
+  white-space: nowrap;
 }
