--- a/client/src/components/global/PaymentList/PaymentFilterModal/PaymentFilterModal.module.scss
+++ b/client/src/components/global/PaymentList/PaymentFilterModal/PaymentFilterModal.module.scss
@@ -65,7 +65,7 @@
   }
 
   &__input {
-    padding: 10px 16px;
+    padding: 10px 16px!important;
 
     &::-webkit-outer-spin-button,
     &::-webkit-inner-spin-button {
