--- a/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
+++ b/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
@@ -8,6 +8,11 @@
   padding: 20px;
   display: flex;
   flex-direction: column;
+  transition: $transition;
+
+  &:hover {
+    box-shadow: 0px 0px 0px 1px $color-main;
+  }
 
   &__mainText {
     @include setFont(24px, 400);
