--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -162,6 +162,14 @@ body {
     color: #585859;
   }
 
+  &[type="date"]
+  {
+    display:block;
+    -webkit-appearance: textfield;
+    -moz-appearance: textfield;
+    min-height: 1.2em;
+  }
+
   &::-webkit-calendar-picker-indicator {
     color: rgba(0, 0, 0, 0);
     opacity: 1;
