--- a/client/src/components/global/AddFormPopup/AddFormPopup.module.scss
+++ b/client/src/components/global/AddFormPopup/AddFormPopup.module.scss
@@ -8,6 +8,14 @@
     gap: 10px;
     flex-direction: column;
   }
+
+  &__label {
+    @include setFont(14px,500);
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 6px;
+  }
   &__btn {
     max-width: 182px;
     display: block;
