--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -167,7 +167,7 @@ body {
     display:block;
     -webkit-appearance: textfield;
     -moz-appearance: textfield;
-    min-height: 1.2em;
+    min-height: 25px;
   }
 
   &::-webkit-calendar-picker-indicator {
