--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -165,9 +165,11 @@ body {
   &[type="date"]
   {
     display:block;
-    -webkit-appearance: textfield;
-    -moz-appearance: textfield;
-    min-height: 25px;
+    //-webkit-appearance: textfield;
+    //-moz-appearance: textfield;
+    //min-height: 25em;
+    -webkit-appearance: none;
+    -moz-appearance: none;
   }
 
   &::-webkit-calendar-picker-indicator {
