--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -170,6 +170,7 @@ body {
     //min-height: 25em;
     -webkit-appearance: none;
     -moz-appearance: none;
+    min-height: 57px;
   }
 
   &::-webkit-calendar-picker-indicator {
