add delete popup

--- a/client/src/components/AddPaymentPage/AddPaymentForm.module.scss
+++ b/client/src/components/AddPaymentPage/AddPaymentForm.module.scss
@@ -11,7 +11,7 @@
 
   &__form {
     border-radius: 16px;
-    background-color: $color-blue-bold;
+    background-color: #252a4a;
     padding: 40px;
     position: relative;
     max-width: 1064px;
