--- a/client/src/components/global/PaymentList/PaymentFilterModal/PaymentFilterModal.module.scss
+++ b/client/src/components/global/PaymentList/PaymentFilterModal/PaymentFilterModal.module.scss
@@ -5,7 +5,7 @@
 .filterModal {
   width: 100%;
   max-width: 440px;
-  background-color: $color-blue-bold;
+  background-color: #252a4a;
   padding: 10px 20px 20px;
   position: fixed;
   right: 0;
@@ -19,13 +19,15 @@
     height: calc(100% - 80px);
     top: 50%;
     transform: translate(calc(0% - 16px), -50%);
-    padding: 8px 16px 10px;
+    padding: 20px 16px 0px;
     border-radius: 20px;
   }
 
   &__crossBtn {
+    top: 10px;
+    right: 16px;
     display: none;
-    @include mdScreenMedia {
+    @include smScreenMedia {
       display: block;
     }
   }
@@ -61,20 +63,6 @@
 
     & svg {
       @include svg(18px,$color-white,12px)
-    }
-  }
-
-  &__input {
-    padding: 10px 16px!important;
-
-    &[type="date"] {
-      min-height: 47px!important;
-    }
-
-    &::-webkit-outer-spin-button,
-    &::-webkit-inner-spin-button {
-      -webkit-appearance: none;
-      margin: 0;
     }
   }
 
