--- a/client/src/styles/_global.scss
+++ b/client/src/styles/_global.scss
@@ -124,12 +124,12 @@ body {
   left: 50%;
   width: calc(100% - 16px);
   max-width: 550px;
-  transform: translate(-50%,-50%);
+  transform: translate(-50%, -50%);
   z-index: 999999;
 }
 
 .popupTitle {
-  @include setFont(19px,500);
+  @include setFont(19px, 500);
   text-align: center;
   margin-bottom: 20px;
 }
@@ -162,12 +162,8 @@ body {
     color: #585859;
   }
 
-  &[type="date"]
-  {
-    display:block;
-    //-webkit-appearance: textfield;
-    //-moz-appearance: textfield;
-    //min-height: 25em;
+  &[type="date"] {
+    display: block;
     -webkit-appearance: none;
     -moz-appearance: none;
     min-height: 57px;
@@ -193,8 +189,16 @@ body {
     background-image: inherit;
     -webkit-text-fill-color: $color-white;
     padding-left: 16px;
-    -webkit-box-shadow: 0 0 0px 1000px #101320 inset;
+    -webkit-box-shadow: 0 0 0px 1000px $color-input-bg inset;
     transition: $transition;
+  }
+
+  &_small {
+    padding: 10px 16px;
+
+    &[type="date"] {
+      min-height: 47px;
+    }
   }
 
   &_withIcon {
@@ -223,7 +227,7 @@ body {
   padding: 15px 10px;
   border-radius: 10px;
   transition: $transition;
-  @include setFont(17px,700,$color-white);
+  @include setFont(17px, 700, $color-white);
   text-overflow: ellipsis;
   overflow: hidden;
 
