--- a/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
+++ b/client/src/components/global/PaymentList/PaymentListItem/PaymentListItem.module.scss
@@ -9,9 +9,26 @@
   display: flex;
   flex-direction: column;
   transition: $transition;
+  position: relative;
 
   &:hover {
     box-shadow: 0px 0px 0px 1px $color-main;
+  }
+
+  &__deleteBtn {
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    border: none;
+    cursor: pointer;
+    border-radius: 4px;
+    padding: 6px 8px;
+    @include flexCol();
+    background-color: $color-red;
+  }
+
+  &__deleteIcon {
+    @include svg(26px,transparent)
   }
 
   &__mainText {
@@ -41,7 +58,7 @@
   }
 
   &__itemStatusBtns {
-    @include flexCol(space-between,flex-start)
+    @include flexCol(space-between, flex-start)
   }
 
   &__itemStatusBtnBlock {
