add edit payment and image slider

--- a/client/src/components/global/PaymentForm/PaymentForm.module.scss
+++ b/client/src/components/global/PaymentForm/PaymentForm.module.scss
@@ -1,7 +1,7 @@
-@import "../../styles/vars";
-@import "../../styles/mixins";
+@import "../../../styles/vars";
+@import "../../../styles/mixins";
 
-.addPaymentForm {
+.paymentForm {
   padding-bottom: 40px;
 
   &__subtitle {
