--- a/client/src/components/global/PaymentList/PaymentList.module.scss
+++ b/client/src/components/global/PaymentList/PaymentList.module.scss
@@ -20,13 +20,27 @@
     background-color: $color-red;
   }
 
+  &__wrapper {
+    @include flexCol(flex-start, stretch);
+    gap: 14px;
+    position: relative;
+
+    @include smScreenMedia {
+      flex-direction: column-reverse;
+    }
+  }
 
   &__main {
     display: grid;
-    grid-template-columns: repeat(auto-fill, minmax(320px, 1fr));
+    grid-template-columns: repeat(3,1fr);
     gap: 20px;
+    align-items: flex-start;
 
-    @include smScreenMedia {
+    @include xlScreenMedia {
+      grid-template-columns: repeat(2,1fr);
+    }
+
+    @include lgScreenMedia {
       grid-template-columns: 1fr;
     }
   }
