--- a/client/src/components/AdminEmployeesPage/AdminEmployeesList/AdminEmployeesListItem/AdminEmployeesListItem.module.scss
+++ b/client/src/components/AdminEmployeesPage/AdminEmployeesList/AdminEmployeesListItem/AdminEmployeesListItem.module.scss
@@ -45,28 +45,18 @@
     margin: 0 auto;
   }
 
-  &__itemBtn {
+  &__deleteBtn {
     white-space: nowrap;
     cursor: pointer;
     border: none;
-    background-color: $color-main;
+    background-color: #ff4040;
     border-radius: 6px;
     padding: 6px 8px;
     @include setFont(14px, 700)
   }
 
-  &__hideBtn {
-      background-color: $color-polo-blue;
-  }
-
-  &__deleteBtn {
-    background-color: $color-red;
-  }
-
   &__cardsBlockHeader {
     @include flexCol(space-between);
-    flex-direction: column;
-    gap: 6px;
     padding-top: 8px;
     padding-bottom: 10px;
   }
