--- a/client/src/components/global/PaymentList/PaymentList.module.scss
+++ b/client/src/components/global/PaymentList/PaymentList.module.scss
@@ -36,6 +36,7 @@
     gap: 20px;
     align-items: stretch;
     padding: 1px;
+    padding-bottom: 20px;
 
     @include xlScreenMedia {
       grid-template-columns: repeat(2,1fr);
